--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,7 @@ jobs:
               pathex=[],
               binaries=[],
               datas=[],
-              hiddenimports=[],
+              hiddenimports=['tkinter', 'tkinter.filedialog', 'tkinter.messagebox'],
               hookspath=[],
               hooksconfig={},
               runtime_hooks=[],
@@ -106,7 +106,7 @@ jobs:
               upx=False,
               console=False,
               disable_windowed_traceback=False,
-              argv_emulation=True,
+              argv_emulation=False,
               target_arch='x86_64',
               codesign_identity=None,
               entitlements_file=None,
@@ -130,9 +130,14 @@ jobs:
               bundle_identifier='com.yourcompany.photouploader',
               version='1.0.0',
               info_plist={
+                  'NSPrincipalClass': 'NSApplication',
                   'NSHighResolutionCapable': 'True',
                   'LSMinimumSystemVersion': '10.13.0',
                   'NSRequiresAquaSystemAppearance': 'False',
+                  'NSAppleEventsUsageDescription': 'PhotoUploader needs to access files.',
+                  'NSSupportsAutomaticTermination': 'NO',
+                  'NSSupportsSuddenTermination': 'NO',
+                  'LSUIElement': '0',
               },
           )
           EOF
@@ -180,7 +185,7 @@ jobs:
               pathex=[],
               binaries=[],
               datas=[],
-              hiddenimports=[],
+              hiddenimports=['tkinter', 'tkinter.filedialog', 'tkinter.messagebox'],
               hookspath=[],
               hooksconfig={},
               runtime_hooks=[],
@@ -205,7 +210,7 @@ jobs:
               upx=False,
               console=True,
               disable_windowed_traceback=False,
-              argv_emulation=True,
+              argv_emulation=False,
               target_arch='x86_64',
               codesign_identity=None,
               entitlements_file=None,
@@ -229,9 +234,14 @@ jobs:
               bundle_identifier='com.yourcompany.photouploader.debug',
               version='1.0.0',
               info_plist={
+                  'NSPrincipalClass': 'NSApplication',
                   'NSHighResolutionCapable': 'True',
                   'LSMinimumSystemVersion': '10.13.0',
                   'NSRequiresAquaSystemAppearance': 'False',
+                  'NSAppleEventsUsageDescription': 'PhotoUploader needs to access files.',
+                  'NSSupportsAutomaticTermination': 'NO',
+                  'NSSupportsSuddenTermination': 'NO',
+                  'LSUIElement': '0',
               },
           )
           EOF
@@ -288,7 +298,7 @@ jobs:
               pathex=[],
               binaries=[],
               datas=[],
-              hiddenimports=[],
+              hiddenimports=['tkinter', 'tkinter.filedialog', 'tkinter.messagebox'],
               hookspath=[],
               hooksconfig={},
               runtime_hooks=[],
@@ -313,7 +323,7 @@ jobs:
               upx=False,
               console=False,
               disable_windowed_traceback=False,
-              argv_emulation=True,
+              argv_emulation=False,
               target_arch='arm64',
               codesign_identity=None,
               entitlements_file=None,
@@ -337,9 +347,14 @@ jobs:
               bundle_identifier='com.yourcompany.photouploader',
               version='1.0.0',
               info_plist={
+                  'NSPrincipalClass': 'NSApplication',
                   'NSHighResolutionCapable': 'True',
                   'LSMinimumSystemVersion': '10.13.0',
                   'NSRequiresAquaSystemAppearance': 'False',
+                  'NSAppleEventsUsageDescription': 'PhotoUploader needs to access files.',
+                  'NSSupportsAutomaticTermination': 'NO',
+                  'NSSupportsSuddenTermination': 'NO',
+                  'LSUIElement': '0',
               },
           )
           EOF
@@ -387,7 +402,7 @@ jobs:
               pathex=[],
               binaries=[],
               datas=[],
-              hiddenimports=[],
+              hiddenimports=['tkinter', 'tkinter.filedialog', 'tkinter.messagebox'],
               hookspath=[],
               hooksconfig={},
               runtime_hooks=[],
@@ -412,7 +427,7 @@ jobs:
               upx=False,
               console=True,
               disable_windowed_traceback=False,
-              argv_emulation=True,
+              argv_emulation=False,
               target_arch='arm64',
               codesign_identity=None,
               entitlements_file=None,
@@ -436,9 +451,14 @@ jobs:
               bundle_identifier='com.yourcompany.photouploader.debug',
               version='1.0.0',
               info_plist={
+                  'NSPrincipalClass': 'NSApplication',
                   'NSHighResolutionCapable': 'True',
                   'LSMinimumSystemVersion': '10.13.0',
                   'NSRequiresAquaSystemAppearance': 'False',
+                  'NSAppleEventsUsageDescription': 'PhotoUploader needs to access files.',
+                  'NSSupportsAutomaticTermination': 'NO',
+                  'NSSupportsSuddenTermination': 'NO',
+                  'LSUIElement': '0',
               },
           )
           EOF
