--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,104 +164,28 @@ jobs:
           echo "--- Removing quarantine attributes ---"
           xattr -cr dist/PhotoUploader.app
       
+      - name: Install create-dmg tool
+        run: brew install create-dmg
+      
       - name: Create DMG for Intel
         run: |
-          cd dist
-          hdiutil create -volname "PhotoUploader Intel" \
-            -srcfolder PhotoUploader.app \
-            -ov -format UDZO \
-            PhotoUploader-macOS-Intel.dmg
-      
-      - name: Create debug version with console
-        run: |
-          # Create debug spec with console enabled
-          cat > PhotoUploader-Debug.spec << 'EOF'
-          # -*- mode: python ; coding: utf-8 -*-
-
-          block_cipher = None
-
-          a = Analysis(
-              ['src/main.py'],
-              pathex=[],
-              binaries=[],
-              datas=[],
-              hiddenimports=['tkinter', 'tkinter.filedialog', 'tkinter.messagebox'],
-              hookspath=[],
-              hooksconfig={},
-              runtime_hooks=[],
-              excludes=[],
-              win_no_prefer_redirects=False,
-              win_private_assemblies=False,
-              cipher=block_cipher,
-              noarchive=False,
-          )
-
-          pyz = PYZ(a.pure, a.zipped_data, cipher=block_cipher)
-
-          exe = EXE(
-              pyz,
-              a.scripts,
-              [],
-              exclude_binaries=True,
-              name='PhotoUploader-Debug',
-              debug=True,
-              bootloader_ignore_signals=False,
-              strip=False,
-              upx=False,
-              console=True,
-              disable_windowed_traceback=False,
-              argv_emulation=False,
-              target_arch='x86_64',
-              codesign_identity=None,
-              entitlements_file=None,
-          )
-
-          coll = COLLECT(
-              exe,
-              a.binaries,
-              a.zipfiles,
-              a.datas,
-              strip=False,
-              upx=False,
-              upx_exclude=[],
-              name='PhotoUploader-Debug',
-          )
-
-          app = BUNDLE(
-              coll,
-              name='PhotoUploader-Debug.app',
-              icon=None,
-              bundle_identifier='com.yourcompany.photouploader.debug',
-              version='1.0.0',
-              info_plist={
-                  'NSPrincipalClass': 'NSApplication',
-                  'NSHighResolutionCapable': 'True',
-                  'LSMinimumSystemVersion': '10.13.0',
-                  'NSRequiresAquaSystemAppearance': 'False',
-                  'NSAppleEventsUsageDescription': 'PhotoUploader needs to access files.',
-                  'NSSupportsAutomaticTermination': 'NO',
-                  'NSSupportsSuddenTermination': 'NO',
-                  'LSUIElement': '0',
-              },
-          )
-          EOF
-          
-          pyinstaller PhotoUploader-Debug.spec --clean --noconfirm
-          chmod +x dist/PhotoUploader-Debug.app/Contents/MacOS/PhotoUploader-Debug
-          codesign --force --deep --sign - dist/PhotoUploader-Debug.app
-          xattr -cr dist/PhotoUploader-Debug.app
-          
-          cd dist
-          hdiutil create -volname "PhotoUploader Intel Debug" \
-            -srcfolder PhotoUploader-Debug.app \
-            -ov -format UDZO \
-            PhotoUploader-macOS-Intel-Debug.dmg
-      
-      - name: Upload debug build
-        uses: actions/upload-artifact@v4
-        with:
-          name: PhotoUploader-macOS-Intel-Debug
-          path: dist/PhotoUploader-macOS-Intel-Debug.dmg
+          # Create a proper installer DMG with Applications folder link
+          create-dmg \
+            --volname "PhotoUploader" \
+            --volicon "dist/PhotoUploader.app/Contents/Resources/AppIcon.icns" \
+            --window-pos 200 120 \
+            --window-size 600 400 \
+            --icon-size 100 \
+            --icon "PhotoUploader.app" 175 120 \
+            --hide-extension "PhotoUploader.app" \
+            --app-drop-link 425 120 \
+            --no-internet-enable \
+            "dist/PhotoUploader-macOS-Intel.dmg" \
+            "dist/PhotoUploader.app" \
+            || hdiutil create -volname "PhotoUploader Intel" \
+               -srcfolder "dist/PhotoUploader.app" \
+               -ov -format UDZO \
+               "dist/PhotoUploader-macOS-Intel.dmg"
       
       - name: Upload Intel macOS artifact
         uses: actions/upload-artifact@v4
@@ -381,104 +305,28 @@ jobs:
           echo "--- Removing quarantine attributes ---"
           xattr -cr dist/PhotoUploader.app
       
+      - name: Install create-dmg tool
+        run: brew install create-dmg
+      
       - name: Create DMG for Apple Silicon
         run: |
-          cd dist
-          hdiutil create -volname "PhotoUploader Apple Silicon" \
-            -srcfolder PhotoUploader.app \
-            -ov -format UDZO \
-            PhotoUploader-macOS-AppleSilicon.dmg
-      
-      - name: Create debug version with console
-        run: |
-          # Create debug spec with console enabled
-          cat > PhotoUploader-Debug.spec << 'EOF'
-          # -*- mode: python ; coding: utf-8 -*-
-
-          block_cipher = None
-
-          a = Analysis(
-              ['src/main.py'],
-              pathex=[],
-              binaries=[],
-              datas=[],
-              hiddenimports=['tkinter', 'tkinter.filedialog', 'tkinter.messagebox'],
-              hookspath=[],
-              hooksconfig={},
-              runtime_hooks=[],
-              excludes=[],
-              win_no_prefer_redirects=False,
-              win_private_assemblies=False,
-              cipher=block_cipher,
-              noarchive=False,
-          )
-
-          pyz = PYZ(a.pure, a.zipped_data, cipher=block_cipher)
-
-          exe = EXE(
-              pyz,
-              a.scripts,
-              [],
-              exclude_binaries=True,
-              name='PhotoUploader-Debug',
-              debug=True,
-              bootloader_ignore_signals=False,
-              strip=False,
-              upx=False,
-              console=True,
-              disable_windowed_traceback=False,
-              argv_emulation=False,
-              target_arch='arm64',
-              codesign_identity=None,
-              entitlements_file=None,
-          )
-
-          coll = COLLECT(
-              exe,
-              a.binaries,
-              a.zipfiles,
-              a.datas,
-              strip=False,
-              upx=False,
-              upx_exclude=[],
-              name='PhotoUploader-Debug',
-          )
-
-          app = BUNDLE(
-              coll,
-              name='PhotoUploader-Debug.app',
-              icon=None,
-              bundle_identifier='com.yourcompany.photouploader.debug',
-              version='1.0.0',
-              info_plist={
-                  'NSPrincipalClass': 'NSApplication',
-                  'NSHighResolutionCapable': 'True',
-                  'LSMinimumSystemVersion': '10.13.0',
-                  'NSRequiresAquaSystemAppearance': 'False',
-                  'NSAppleEventsUsageDescription': 'PhotoUploader needs to access files.',
-                  'NSSupportsAutomaticTermination': 'NO',
-                  'NSSupportsSuddenTermination': 'NO',
-                  'LSUIElement': '0',
-              },
-          )
-          EOF
-          
-          pyinstaller PhotoUploader-Debug.spec --clean --noconfirm
-          chmod +x dist/PhotoUploader-Debug.app/Contents/MacOS/PhotoUploader-Debug
-          codesign --force --deep --sign - dist/PhotoUploader-Debug.app
-          xattr -cr dist/PhotoUploader-Debug.app
-          
-          cd dist
-          hdiutil create -volname "PhotoUploader Apple Silicon Debug" \
-            -srcfolder PhotoUploader-Debug.app \
-            -ov -format UDZO \
-            PhotoUploader-macOS-AppleSilicon-Debug.dmg
-      
-      - name: Upload debug build
-        uses: actions/upload-artifact@v4
-        with:
-          name: PhotoUploader-macOS-AppleSilicon-Debug
-          path: dist/PhotoUploader-macOS-AppleSilicon-Debug.dmg
+          # Create a proper installer DMG with Applications folder link
+          create-dmg \
+            --volname "PhotoUploader" \
+            --volicon "dist/PhotoUploader.app/Contents/Resources/AppIcon.icns" \
+            --window-pos 200 120 \
+            --window-size 600 400 \
+            --icon-size 100 \
+            --icon "PhotoUploader.app" 175 120 \
+            --hide-extension "PhotoUploader.app" \
+            --app-drop-link 425 120 \
+            --no-internet-enable \
+            "dist/PhotoUploader-macOS-AppleSilicon.dmg" \
+            "dist/PhotoUploader.app" \
+            || hdiutil create -volname "PhotoUploader Apple Silicon" \
+               -srcfolder "dist/PhotoUploader.app" \
+               -ov -format UDZO \
+               "dist/PhotoUploader-macOS-AppleSilicon.dmg"
       
       - name: Upload Apple Silicon macOS artifact
         uses: actions/upload-artifact@v4
